# hh_communicator_draft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: plot_transmission.py
src/: .clang-format  hedgehog_comm.h  log.hpp  main.cpp  mpi.hpp  mpi_bridge.hpp  mpi_bridge_core.hpp
src/communicator/: comm_service.hpp  comm_tools.hpp  communicator.hpp  communicator_core_task.hpp  communicator_memory_manager.hpp  communicator_task.hpp  generic_core_task.hpp  hedgehog_comm.h  hints.hpp  package.hpp  protocol.hpp  request.hpp  send_strategies.hpp  stats.hpp  task_communicator.hpp  type_map.hpp
src/communicator/memory_manager/: automatic_memory_pool.hpp  memory_manager.hpp  memory_pool.hpp
src/communicator/profiling/: communicator_profiler.hpp  profiling_tools.hpp
src/communicator/service/: clh_service.hpp  comm_service.hpp  mpi_service.hpp  request.hpp
src/communicator/tool/: log.hpp  memory_manager.hpp  memory_pool.hpp  old_memory_pool.hpp  packing.hpp  queue.hpp  table.hpp
test/common/: .clang-format  ap.h  timer.h  utest.h
test/hadamard_product/cpu/: .clang-format  argument_parser.hpp  build.sh  log.hpp  main.cpp
test/matrix_multiplication/cpu/: .clang-format  Makefile
test/matrix_multiplication/cpu/config/: blackbird.mk  desktop.mk
test/matrix_multiplication/cpu/scripts/: job-multinode.sh
test/matrix_multiplication/cpu/src/: data.hpp  graph.hpp  main.cpp  state.cpp  state.hpp  task.cpp  task.hpp
test/queue/: Makefile  main.cpp
tests/basic/: Makefile  main.cpp
tests/common/: ap.h
tests/hadamard_product/cpu/: Makefile  main.cpp
tests/hadamard_product/cpu/config/: blackbird.mk
tests/matrix_multiplication/cpu/config/: desktop.mk
tests/matrix_multiplication/cpu/scripts/: job.sh
tests/matrix_multiplication/cpu/src/: data.hpp  graph.hpp  log.hpp  main.cpp  state.cpp  state.hpp  task.cpp  task.hpp
